--- a/literacy/instruments/crypto.html
+++ b/literacy/instruments/crypto.html
@@ -69,6 +69,8 @@
         </details>
 </div>
 <div><ul>
+<li><a href="/literacy/instruments/crypto">Криптовалюты</a></li>
+<ul>
 <li><a href="/literacy/instruments/crypto#_2">Общие представления</a></li>
 <li><a href="/literacy/instruments/crypto#_3">Криптовалюты как валюты</a></li>
 <li><a href="/literacy/instruments/crypto#_4">Криптовалюты как средство платежа</a></li>
@@ -79,6 +81,8 @@
 <li><a href="/literacy/instruments/crypto#_8">Money and Cryptocurrencies</a></li>
 <li><a href="/literacy/instruments/crypto#_9">The Web3 Fraud</a></li>
 </ul>
+</ul>
+<li><a href="/literacy/instruments/crypto#_10">Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a></li>
 </ul></div>
 <section id="_2">
 <h2><a href="/literacy/instruments/crypto#_2">Общие представления</a></h2>
@@ -204,6 +208,17 @@
 <p>Even the most optimal storage strategy in Ethereum requires 600 gas per byte.  Yet the total network compute capacity is only 2M gas/second so storing 1 megabyte will require 300 seconds.   So not only can the Ethereum blockchain only store 3 kB of data a second, storing that 3kB costs $250!  So the cost of writing a single 3kB message to the Ethereum blockchain is the same price as a year of storage on Amazon for the entire 1 TB Ethereum blockchain.  Or the same price as buying a 1 TB M.2 SSD.</p>
 </section>
 </section>
+</section>
+<section id="_10">
+<h1><a href="/literacy/instruments/crypto#_10">Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a></h1>
+<div class="meta">
+<div>
+        Обновления:
+        <ul>
+                <li>2021-01-21: Обзор DeFi сервисов на блокчейне Терра</li>
+        </ul>
+        </div><a href="https://rationalanswer.club/post/558/" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a></div>
+<p>Обзор DeFi сервисов на блокчейне Терра.</p>
 </section>
             </div>
             <hr/>
