--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -33,6 +33,7 @@
                 <h1> Банковские счета, карты и вклады </h1>
                 <div class="meta"><p class=summary>Риски и доходность банковских вкладов</p>
                     <p> Опубликовано: <time>2020-01-02</time> </p>
+                    <p>  Обновлено: <time>2022-01-27</time> </p>
 <p>Находится в:</p>
                     <ul>
     <a href='/literacy/instruments'>Краткий обзор инструментов сбережения</a>
@@ -47,7 +48,12 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
-<details>
+<div>
+        Обновления:
+        <ul>
+                <li>2022-01-27: Актуализировал данные, добавил динамику доходности по средней максимальной ставке.</li>
+        </ul>
+        </div><details>
             <summary>Используется в:</summary>
             <ul>
                         <li><a href='/literacy/instruments/realty'>Недвижимость</a>    <button class='link-meta-anchor'>
@@ -72,8 +78,7 @@
         <span class='description'></span>
     </span></li>
             </ul>
-        </details>
-</div>
+        </details></div>
 <p>Подробно нюансы работы с банковскими счетами и вкладами описаны <a href="/literacy/deposits">в отдельной статье</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
         <span class='link-meta'>
@@ -89,17 +94,29 @@
 </ol>
 <p>Можно выбрать вклад (накопительный счёт) с плавающей ставкой, когда она изменяется вслед за рыночной, или с возможностью досрочного изъятия средств (полностью или до неснижаемого остатка). Только в этом случае ставка по вкладу будет ниже рыночной на 1–2%г.</p>
 <p>Другой вариант снижения этих рисков при (возможно) меньшей потере доходности — <a href="https://rostsber.ru/publish/banks/deposits/o-lestnitsakh-vkladov.html">лестницы вкладов</a> — серии пополняемых долгосрочных вкладов, открываемых с небольшим смещением срока закрытия: процентная ставка равна ставке по длинному вкладу, а фактический срок вложений основной суммы — величине смещения между вкладами.</p>
-<p>Посмотрим как сохраняются деньги на вкладах (<a href="https://www.cbr.ru/statistics/pdko/int_rat/">данные по ставкам</a>, взяты без учёта Сбербанка, ставки по вкладам в долларах в иностранных банках будут ниже).</p>
+<p>Посмотрим как сохраняются деньги на вкладах:</p>
 <p><img src="/literacy/instruments/dep_usdrur.svg"></img></p>
-<p>Видим интересный эффект, что в долгосрочном периоде нет разницы, в какой валюте делать сбережения. Это следует из <em>условия безарбитражности</em>: получение безрисковой реальной доходности невозможно. Высокие процентные ставки уравновешивают риск девальвации, а рост валютного курса уравновешивается падением ставок.</p>
-<p>Реальная доходность вкладов в надёжных банках почти всегда отрицательна: вы платите банку за безопасность ваших денег и удобство работы с ними. Поэтому держать там имеет смысл только оперативный и чрезвычайный резервы (те деньги, которые могут понадобиться в любой момент), а также накопления на ближайшие финансовые цели (до трёх лет).</p>
-<div class="todo" id="ga3gERALuck">
-<p><i class='share'><a href='/literacy/instruments/deposits2#ga3gERALuck'>&#xe902;</a></i>
-Однако, даже умеренно-активные действия по выбору вкладов позволяют <a href="https://rationalanswer.club/post/494/?comment_order=-created_at#comment-1496a474-5ed7-49b1-a593-958667a71385">значительно улучшить</a> эти результаты.</p>
+<ol>
+<li>
+<p>В «спокойные» периоды, в долгосрочной перспективе, валюта сбережений не имеет значения: до 2014г. накопленная реальная доходность вкладов в долларах и рублях идёт бок-о-бок. Девальвация 2008-го года преимущественно ликвидировала накопленный разрыв в доходности, скачок 2014-го был обусловлен геополитическими причинами и после него доходность валютных вкладов по-прежнему не демонстрирует опережающей динамики по сравнению с рублёвыми.</p>
+<p>Это следует из <em>условия безарбитражности</em>: получение безрисковой реальной доходности невозможно, поэтому повышенная скорость обесценения валюты будет компенсироваться более высокой доходностью по ней. (См. также <a href="https://en.wikipedia.org/wiki/International_Fisher_effect">международный эффект Фишера</a>, <a href="https://www.youtube.com/watch?v=tHKPkxDJbMk">проверка эффекта на множестве валют <span><img src='/images/yt.png' style='height: 0.6em; margin-left: -0.5ex; vertical-align: text-top'></span></a>.)</p>
+</li>
+<li>
+<p>В краткосрочной перспективе валютные вклады для рублёвых целей категорически противопоказаны: вложившись в неудачный момент вы быстро и легко теряете 20 и более процентов своего капитала, возвращения которого можете уже и не дождаться.</p>
+</li>
+<li>
+<p>Реальная доходность вкладов в надёжных банках почти всегда отрицательна: вы платите банку за безопасность ваших денег и удобство работы с ними. Поэтому держать там имеет смысл только оперативный и чрезвычайный резервы (те деньги, которые могут понадобиться в любой момент), а также накопления на ближайшие финансовые цели.</p>
+</li>
+</ol>
+<div class="sidenote">
+<p>Однако, умеренно-активные действия по выбору вкладов позволяют <a href="https://rationalanswer.club/post/494/?comment_order=-created_at#comment-1496a474-5ed7-49b1-a593-958667a71385">несколько улучшить</a> эти результаты:</p>
+<p><img src="/literacy/instruments/dep_usdrur_am.svg" style="width: 80%"></img></p>
+<p>Жёлтая линия здесь — накопленная реальная доходность вкладов по средней максимальной ставке топ-10 банков. К сожалению, этот показатель рассчитывается не так долго и почти целиком попадает на период, когда ставки были выше инфляции. Однако мы всё равно видим эпизоды обесценения таких вкладов инфляцией.</p>
 </div>
 <p>Кризисные явления в экономике часто заставляют даже весьма надёжные банки предлагать доходности значительно выше ожидаемой инфляции. В этом случае целесообразно открывать долгосрочные пополняемые вклады, чтобы зафиксировать привлекательную ставку, и переносить туда часть денег из более агрессивных инструментов.</p>
 <p>После введения страхования вкладов стало модным открывать вклады в мусорных банках, предлагающих ставки заметно выше рыночных. Дескать, АСВ всё равно возместит и вложенные деньги, и проценты. По факту, это поощрение мошенников к ограблению налогоплательщиков. Взносы в АСВ — это наши с вами недополученные проценты со вкладов, и наши налоги, когда в АСВ деньги заканчиваются. Практика АСВ возмещать начисленные проценты по вкладам должна быть прекращена (или, по крайней мере, они должны возмещаться в размере не более 2/3 ключевой ставки).</p>
-<p><a href="https://www.banki.ru/products/deposits/">Поиск вкладов</a> (всегда внимательно читайте условия вклада на сайте банка), оценка надёжности банков: <a href="http://kuap.ru/">Куап</a>, <a href="http://www.analizbankov.ru/">Анализ банков</a>.</p>
+<p>Не так давно Московская биржа запустила портал <a href="https://finuslugi.ru/">Финуслуги</a>, где можно очень удобно выбирать вклады. Некоторые можно открыть прямо с портала, иногда с небольшой премией к ставке банка.</p>
+<p>Сервисы с оценкой надёжности банков: <a href="http://kuap.ru/">Куап</a>, <a href="http://www.analizbankov.ru/">Анализ банков</a>.</p>
 </section>
             </div>
             <hr/>
