--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,11 @@
 
         <ul>
             <li>
+                <span>2022-01-27</span>
+                <a href="https://onfin.github.io/literacy/instruments/deposits2">Обновлено: Банковские счета, карты и вклады</a>
+                <p class=index-descr>Актуализировал данные, добавил динамику доходности по средней максимальной ставке.</p>
+            </li>
+            <li>
                 <span>2022-01-14</span>
                 <a href="https://onfin.github.io/literacy/instruments/crypto#_9">Обновлено: Криптовалюты/Ссылки по теме/The Web3 Fraud</a>
                 <p class=index-descr>Скорость и стоимость хранения и вычислений на блокчейне Эфира. 600КГц или 3kB/с за 250$ в секунду.</p>
@@ -188,6 +193,11 @@
                 <span>2021-01-26</span>
                 <a href="https://onfin.github.io/notes/inflation#structure">Обновлено: Инфляция/Составляющие инфляции/Структура потребления</a>
                 <p class=index-descr>Изменение структуры потребления без изменения цен *не* влияет на ИПЦ.</p>
+            </li>
+            <li>
+                <span>2021-01-21</span>
+                <a href="https://onfin.github.io/literacy/instruments/crypto#_10">Обновлено: Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a>
+                <p class=index-descr>Обзор DeFi сервисов на блокчейне Терра</p>
             </li>
             <li>
                 <span>2021-01-08</span>
@@ -355,7 +365,7 @@
                 <p class=index-descr>Специфика, риски и доходность облигаций.</p>
             </li>
             <li>
-                <span>2020-01-02</span>
+                <span>2022-01-27</span>
                 <a href="https://onfin.github.io/literacy/instruments/deposits2">Банковские счета, карты и вклады</a>
                 <p class=index-descr>Риски и доходность банковских вкладов</p>
             </li>
