--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -102,7 +102,7 @@
 <p>Это следует из <em>условия безарбитражности</em>: получение безрисковой реальной доходности невозможно, поэтому повышенная скорость обесценения валюты будет компенсироваться более высокой доходностью по ней. (См. также <a href="https://en.wikipedia.org/wiki/International_Fisher_effect">международный эффект Фишера</a>, <a href="https://www.youtube.com/watch?v=tHKPkxDJbMk">проверка эффекта на множестве валют <span><img src='/images/yt.png' style='height: 0.6em; margin-left: -0.5ex; vertical-align: text-top'></span></a>.)</p>
 </li>
 <li>
-<p>В краткосрочной перспективе валютные вклады для рублёвых целей категорически противопоказаны: вложившись в неудачный момент вы быстро и легко теряете 20 и более процентов своего капитала, возвращения которого можете уже и не дождаться.</p>
+<p>В краткосрочной перспективе валютные вклады для рублёвых целей категорически противопоказаны: вложившись в неудачный момент вы быстро и легко теряете 20 и более процентов своего капитала, возвращения которых можете уже и не дождаться.</p>
 </li>
 <li>
 <p>Реальная доходность вкладов в надёжных банках почти всегда отрицательна: вы платите банку за безопасность ваших денег и удобство работы с ними. Поэтому держать там имеет смысл только оперативный и чрезвычайный резервы (те деньги, которые могут понадобиться в любой момент), а также накопления на ближайшие финансовые цели.</p>
