better_than_average

--- a/literacy/erratic_returns/index.html
+++ b/literacy/erratic_returns/index.html
@@ -54,6 +54,13 @@
         <span class='header'>Аспекты риска/Рыночных инструментов и портфелей/Толстые хвосты и асимметрия доходностей</span>
         <span class='description'></span>
     </span></li>
+                        <li><a href='/notes/better_than_average'>Инвесторов лучше «среднего» — очень мало, а не половина</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Инвесторов лучше «среднего» — очень мало, а не половина</span>
+        <span class='description'>Распределение доходностей инвесторов — асимметрично. Поэтому «лучше среднего» — это не «средний инвестор» + чуть-чуть, а высшая лига, топ-10%, если не круче.</span>
+    </span></li>
             </ul>
         </details>
 </div>
