--- a/notes/active_results/index.html
+++ b/notes/active_results/index.html
@@ -35,9 +35,9 @@
                     <p> Опубликовано: <time>2021-11-29</time> </p>
 <p>Находится в:</p>
                     <ul>
-    <a href='/pages/sources'>Источники</a>
-
     <a href='/notes#portfolio'>Заметки о финансах/Инвестиционный портфель</a>
+
+    <a href='/pages/sources'>Источники</a>
 
     </ul>
 
@@ -54,6 +54,13 @@
     <span class='link-meta'>
         <span class='header'>Активные инвестиции</span>
         <span class='description'>Некоторые заметки по проблемам и возможностям активного инвестирования, нигде более не записанные</span>
+    </span></li>
+                        <li><a href='/notes/better_than_average'>Инвесторов лучше «среднего» — очень мало, а не половина</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Инвесторов лучше «среднего» — очень мало, а не половина</span>
+        <span class='description'>Распределение доходностей инвесторов — асимметрично. Поэтому «лучше среднего» — это не «средний инвестор» + чуть-чуть, а высшая лига, топ-10%, если не круче.</span>
     </span></li>
                         <li><a href='/literacy/erratic_returns#non-ergo'>Контринтуитивная доходность/Неэргодичность</a>    <button class='link-meta-anchor'>
             <strong>i</strong>
@@ -73,6 +80,7 @@
 </ul>
 <li><a href="/notes/active_results#spiva">SPIVA</a></li>
 <li><a href="/notes/active_results#vanguard">Vanguard</a></li>
+<li><a href="/notes/active_results#morningstar">Morningstar Active/Passive Barometer</a></li>
 </ul></div>
 <section id="_2">
 <h2><a href="/notes/active_results#_2">Обзорные источники</a></h2>
@@ -111,6 +119,11 @@
 <p><tbody><tr ><td  rowspan=2 > Были в пред. 5 лет                           </td><td  colspan=6 >Стали в след. 5 лет </td></tr><tr ><td >     Лучшие </td><td > 2 </td><td >3 </td><td >4 </td><td > Худшие </td><td > Ликвидированы </td></tr><tr ><td > Лучшие </td><td > 19.3% </td><td > 16.3% </td><td > 10.3% </td><td > 12.6% </td><td > 18.3% </td><td > 23.2% </td></tr><tr ><td > 2      </td><td > 16.2 </td><td > 14.9 </td><td > 13.2 </td><td > 14.4 </td><td > 11.1 </td><td > 30.2 </td></tr><tr ><td > 3      </td><td > 11.8 </td><td > 16.8 </td><td > 15.4 </td><td > 12.9 </td><td > 10.6 </td><td > 32.5 </td></tr><tr ><td > 4      </td><td > 10.0 </td><td > 11.0 </td><td > 17.2 </td><td > 14.3 </td><td > 11.7 </td><td > 35.9 </td></tr><tr ><td > Худшие </td><td > 8.9  </td><td > 7.9  </td><td > 10.3 </td><td > 12.3 </td><td > 14.9 </td><td > 45.7 </td></tr></tbody></p>
 </table>
 </section>
+<section id="morningstar">
+<h2><a href="/notes/active_results#morningstar">Morningstar Active/Passive Barometer<i class=share>&#xe9cb;</i></a></h2>
+<div class="meta">
+<a href="https://www.morningstar.com/lp/active-passive-barometer" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a></div>
+</section>
 </section>
             </div>
             <hr/>
@@ -127,8 +140,8 @@
                         </ul>
                     </div>
                     <div class="up">
-                        <span> &uarr; <a href='/pages/sources'> Источники</a> &uarr; </span>
                         <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
+                        <span> &uarr; <a href='/pages/sources'> Источники</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
