--- a/updates.html
+++ b/updates.html
@@ -31,8 +31,18 @@
         <ul>
             <li>
                 <span>2022-01-27</span>
+                <a href="https://onfin.github.io/notes/better_than_average">Инвесторов лучше «среднего» — очень мало, а не половина</a>
+                <p class=index-descr>Распределение доходностей инвесторов — асимметрично. Поэтому «лучше среднего» — это не «средний инвестор» + чуть-чуть, а высшая лига, топ-10%, если не круче.</p>
+            </li>
+            <li>
+                <span>2022-01-27</span>
                 <a href="https://onfin.github.io/literacy/instruments/deposits2">Обновлено: Банковские счета, карты и вклады</a>
                 <p class=index-descr>Актуализировал данные, добавил динамику доходности по средней максимальной ставке.</p>
+            </li>
+            <li>
+                <span>2022-01-21</span>
+                <a href="https://onfin.github.io/literacy/instruments/crypto#_10">Обновлено: Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a>
+                <p class=index-descr>Обзор DeFi сервисов на блокчейне Терра</p>
             </li>
             <li>
                 <span>2022-01-14</span>
@@ -193,11 +203,6 @@
                 <span>2021-01-26</span>
                 <a href="https://onfin.github.io/notes/inflation#structure">Обновлено: Инфляция/Составляющие инфляции/Структура потребления</a>
                 <p class=index-descr>Изменение структуры потребления без изменения цен *не* влияет на ИПЦ.</p>
-            </li>
-            <li>
-                <span>2021-01-21</span>
-                <a href="https://onfin.github.io/literacy/instruments/crypto#_10">Обновлено: Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a>
-                <p class=index-descr>Обзор DeFi сервисов на блокчейне Терра</p>
             </li>
             <li>
                 <span>2021-01-08</span>
