--- a/notes/active_investing.html
+++ b/notes/active_investing.html
@@ -59,6 +59,13 @@
         <span class='header'>Выбор времени для покупки акций</span>
         <span class='description'>Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит.</span>
     </span></li>
+                    <li><a href='/notes/better_than_average'>Инвесторов лучше «среднего» — очень мало, а не половина</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Инвесторов лучше «среднего» — очень мало, а не половина</span>
+        <span class='description'>Распределение доходностей инвесторов — асимметрично. Поэтому «лучше среднего» — это не «средний инвестор» + чуть-чуть, а высшая лига, топ-10%, если не круче.</span>
+    </span></li>
                     <li><a href='/literacy/erratic_returns#non-stat'>Контринтуитивная доходность/Нестационарность</a>    <button class='link-meta-anchor'>
             <strong>i</strong>
     </button>
