--- a/literacy/discounting/index.html
+++ b/literacy/discounting/index.html
@@ -44,6 +44,18 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/no_fair_price'>На рынке не бывает справедливых цен</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>На рынке не бывает справедливых цен</span>
+        <span class='description'>Потому что для каждого инвестора справедливая цена — своя</span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <div><ul>
 <li><a href="/literacy/discounting#intro">Деньги сейчас стоят дороже, чем деньги в будущем</a></li>
@@ -197,6 +209,12 @@
                     Категории:<a href="/categories/math">Математика</a>
 <a href="/categories/savings">Сбережения</a>
 <a href="/categories/yield">Доходность</a>
+                    </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/no_fair_price'>На рынке не бывает справедливых цен</a></li>
+                        </ul>
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/literacy#instruments'> Грамотность/Инструменты</a> &uarr; </span>
