--- a/notes/active_investing.html
+++ b/notes/active_investing.html
@@ -50,6 +50,13 @@
 <div class="procontra">
             <span class='pro'>pro</span> &amp; <span class='contra'>contra</span>
             <ul class='pro'>
+                    <li><a href='/notes/no_fair_price'>На рынке не бывает справедливых цен</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>На рынке не бывает справедливых цен</span>
+        <span class='description'>Потому что для каждого инвестора справедливая цена — своя</span>
+    </span></li>
             </ul>
             <ul class='contra'>
                     <li><a href='/notes/markettiming'>Выбор времени для покупки акций</a>    <button class='link-meta-anchor'>
