--- a/notes/better_than_average/index.html
+++ b/notes/better_than_average/index.html
@@ -35,7 +35,7 @@
                     <p> Опубликовано: <time>2022-01-27</time> </p>
 <p>Находится в:</p>
                     <ul>
-    <a href='/notes#persfin'>Заметки о финансах/Личные финансы</a>
+    <a href='/notes#portfolio'>Заметки о финансах/Инвестиционный портфель</a>
 
     </ul>
 
@@ -62,7 +62,7 @@
 <div class="sidenote">
 <p>К упомянутым исследованиям обычно предъявляют обвинения в ангажированности (хотя специализация Morningstar — именно активно-управляемые фонды), однако за проверкой результатов далеко ходить не нужно. Картинка выше построена просто на результатах <a href="https://www.zacks.com/screening/mutual-fund-screener">скринера</a> по американским Large Cap Blend фондам (т.е. бенчмарком которых будет SnP500), существующим более 10 лет. То есть даже без поправки на провалившиеся и закрытые — выводы подтверждаются.</p>
 <p>Доходность я показал после комиссий, что тоже является предметом претензий. В упомянутых исследованиях можно увидеть результаты до комиссий — они, очевидно, чуть лучше, хотя и не намного. На моём графике в этом случае опережать рынок будут 33% фондов (но, опять же, надо вспомнить про ошибку выжившего). Однако сравнение результатов до комиссий с рынком будет <strong>некорректным</strong>. Активные стратегии имеют гораздо более высокие по сравнению с пассивными транзакционные и организационные издержки, которые оплачиваются из комиссии фонда. «Исправляя» результаты активных фондов на размер комиссий, мы делаем их стратегии бесплатными, а это очень существенная фора.</p>
-<p>Ещё одно замечание, о котором я недавно с удивлением узнал, это игнорирование размера фондов. Вообще, в детальных отчётах есть и цифры, взвешенные по размеру активов фондов (да, там отставание чуть меньше, чем при равном взвешивании), однако это странное взвешивание. Ведь нас интересует тот факт, что 90+% активных <strong>стратегий</strong> провалились, а не то, что 75+% <strong>денег</strong> было вложено неэффективно.</p>
+<p>Ещё одно замечание, о котором я недавно с удивлением узнал, это игнорирование размера фондов. Вообще, в детальных отчётах есть цифры, взвешенные по размеру активов фондов, и качественную картину это не меняет: на 90+% провалившихся активных <strong>стратегий</strong> приходится 75+% <strong>денег</strong>, оказавшихся вложенными неэффективно. Т.е. асимметрия остаётся, хотя и чуть менее выраженная.</p>
 </div>
 <p>Таким образом выбор среднерыночного результата — это выбор места не в конце списка участников, а ближе к лучшим 10%. Причём практически бесплатного места — комиссии пассивных фондов минимальны. А чтобы пробиться на это место своими силами — надо быть не чуть-чуть лучше «среднего инвестора», а значительно лучше довольно опытного большинства.</p>
 </section>
@@ -72,7 +72,7 @@
                     Категории:<a href="/categories/market">Финансовый рынок</a>
                     </div>
                     <div class="up">
-                        <span> &uarr; <a href='/notes#persfin'> Заметки о финансах/Личные финансы</a> &uarr; </span>
+                        <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
