--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,11 @@
 
         <ul>
             <li>
+                <span>2022-01-28</span>
+                <a href="https://onfin.github.io/notes/no_fair_price">На рынке не бывает справедливых цен</a>
+                <p class=index-descr>Потому что для каждого инвестора справедливая цена — своя</p>
+            </li>
+            <li>
                 <span>2022-01-27</span>
                 <a href="https://onfin.github.io/notes/better_than_average">Инвесторов лучше «среднего» — очень мало, а не половина</a>
                 <p class=index-descr>Распределение доходностей инвесторов — асимметрично. Поэтому «лучше среднего» — это не «средний инвестор» + чуть-чуть, а высшая лига, топ-10%, если не круче.</p>
@@ -41,7 +46,7 @@
             </li>
             <li>
                 <span>2022-01-21</span>
-                <a href="https://onfin.github.io/literacy/instruments/crypto#_10">Обновлено: Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a>
+                <a href="https://onfin.github.io/literacy/instruments/crypto#_10">Обновлено: Криптовалюты/Ссылки по теме/Артём Крумпан. Что такое Децентрализованные Финансы (DeFi)?</a>
                 <p class=index-descr>Обзор DeFi сервисов на блокчейне Терра</p>
             </li>
             <li>
@@ -275,7 +280,7 @@
                 <p class=index-descr>Вопреки распространённому мнению, довложения в портфель увеличивают его риск в смысле неопределённости ожидаемой доходности (ну и, конечно же, никак не влияют на сам размер ожидаемой доходности)</p>
             </li>
             <li>
-                <span>2022-01-14</span>
+                <span>2022-01-21</span>
                 <a href="https://onfin.github.io/literacy/instruments/crypto">Криптовалюты</a>
                 <p class=index-descr>Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные.</p>
             </li>
