--- a/calculators/cards.html
+++ b/calculators/cards.html
@@ -33,7 +33,7 @@
                 <h1> Калькуляторы банковских карт </h1>
                 <div class="meta"><p class=summary>Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт.</p>
                     <p> Опубликовано: <time>2019-10-13</time> </p>
-                    <p>  Обновлено: <time>2022-01-08</time> </p>
+                    <p>  Обновлено: <time>2022-01-29</time> </p>
 <p>Находится в:</p>
                     <ul>
     <a href='/calculators'>Калькуляторы</a>
@@ -49,6 +49,7 @@
 <li><a href="/calculators/cards#_2">Потери от хранения денег в наличности и на счетах под низкий процент</a></li>
 <li><a href="/calculators/cards#_3">Доход от кэшбэка и процента на остаток по дебетовой карте</a></li>
 <li><a href="/calculators/cards#_4">Доход от кэшбэка и льготного кредита по кредитной карте</a></li>
+<li><a href="/calculators/cards#_5">Эффективный кэшбэк за повседневные покупки при разных схемах округления</a></li>
 </ul></div>
 <section id="_2">
 <h2><a href="/calculators/cards#_2">Потери от хранения денег в наличности и на счетах под низкий процент</a></h2>
@@ -255,6 +256,23 @@
     }
   )
 </script>
+</section>
+<section id="_5">
+<h2><a href="/calculators/cards#_5">Эффективный кэшбэк за повседневные покупки при разных схемах округления</a></h2>
+<div class="meta">
+<div>
+        Обновления:
+        <ul>
+                <li>2022-01-29: Рассчитал эффективный кэшбеэк за свои повседневные покупки при разных схемах округления и разных ставках</li>
+        </ul>
+        </div>
+</div>
+<table>
+<p><tbody><tr ><td > Честная ставка </td><td > 1%  </td><td > 1,5%  </td><td >  2%     </td><td > 3%    </td><td >  4%    </td><td > 5%    </td></tr><tr ><td > Схема Тинька </td><td > 0,88% </td><td > 1,38% </td><td >  1,88%  </td><td > 2,88% </td><td >  3,87% </td><td > 4,88% </td></tr><tr ><td > Схема Альфы </td><td > 0,88%  </td><td > 1,32% </td><td >  1,76%  </td><td > 2,63% </td><td >  3,51% </td><td > 4,39% </td></tr></tbody></p>
+</table>
+<p>Схема Тинька — стоимость покупки умножается на ставку кэшбэка, потом округляется вниз до целых рублей.</p>
+<p>Схема Альфы — стоимость покупки округляется вниз до суммы кратной 100 рублям, потом умножается на ставку кэшбэка.</p>
+<p>Эффективные ставки посчитаны на основе <em>моих</em> повседневных покупок за 2021 год (крупные и разовые расходы исключены, массово не закупаюсь, поход за продуктами для меня — это зайти в 4-5 лавочек).</p>
 </section>
 </section>
             </div>
