--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -56,6 +56,13 @@
         </div><details>
             <summary>Используется в:</summary>
             <ul>
+                        <li><a href='/notes/usdrub'>Ищем «справедливый» курс доллара</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Ищем «справедливый» курс доллара</span>
+        <span class='description'>Исходя из принципа паритета процентных ставок пробуем рассчитать «справедливый» курс доллара на текущий момент и понять, много ли мы «переплачиваем» за геополитичекую напряжённость, вкладываясь сейчас в зарубежные инструменты.</span>
+    </span></li>
                         <li><a href='/literacy/instruments/realty'>Недвижимость</a>    <button class='link-meta-anchor'>
             <strong>i</strong>
     </button>
@@ -99,7 +106,7 @@
 <ol>
 <li>
 <p>В «спокойные» периоды, в долгосрочной перспективе, валюта сбережений не имеет значения: до 2014г. накопленная реальная доходность вкладов в долларах и рублях идёт бок-о-бок. Девальвация 2008-го года преимущественно ликвидировала накопленный разрыв в доходности, скачок 2014-го был обусловлен геополитическими причинами и после него доходность валютных вкладов по-прежнему не демонстрирует опережающей динамики по сравнению с рублёвыми.</p>
-<p>Это следует из <em>условия безарбитражности</em>: получение безрисковой реальной доходности невозможно, поэтому повышенная скорость обесценения валюты будет компенсироваться более высокой доходностью по ней. (См. также <a href="https://en.wikipedia.org/wiki/International_Fisher_effect">международный эффект Фишера</a>, <a href="https://www.youtube.com/watch?v=tHKPkxDJbMk">проверка эффекта на множестве валют <span><img src='/images/yt.png' style='height: 0.6em; margin-left: -0.5ex; vertical-align: text-top'></span></a>.)</p>
+<p>Это следует из <em>условия безарбитражности</em>: получение безрисковой реальной доходности невозможно, поэтому повышенная скорость обесценения валюты будет компенсироваться более высокой доходностью по ней. (См. также <a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B0%D1%80%D0%B8%D1%82%D0%B5%D1%82_%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D0%BD%D1%82%D0%BD%D1%8B%D1%85_%D1%81%D1%82%D0%B0%D0%B2%D0%BE%D0%BA">паритет процентных ставок</a>, <a href="https://www.youtube.com/watch?v=tHKPkxDJbMk">проверка эффекта на множестве валют <span><img src='/images/yt.png' style='height: 0.6em; margin-left: -0.5ex; vertical-align: text-top'></span></a>.)</p>
 </li>
 <li>
 <p>В краткосрочной перспективе валютные вклады для рублёвых целей категорически противопоказаны: вложившись в неудачный момент вы быстро и легко теряете 20 и более процентов своего капитала, возвращения которых можете уже и не дождаться.</p>
