--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,16 @@
 
         <ul>
             <li>
+                <span>2022-01-30</span>
+                <a href="https://onfin.github.io/notes/usdrub">Ищем «справедливый» курс доллара</a>
+                <p class=index-descr>Исходя из принципа паритета процентных ставок пробуем рассчитать «справедливый» курс доллара на текущий момент и понять, много ли мы «переплачиваем» за геополитичекую напряжённость, вкладываясь сейчас в зарубежные инструменты.</p>
+            </li>
+            <li>
+                <span>2022-01-29</span>
+                <a href="https://onfin.github.io/calculators/cards#_5">Обновлено: Калькуляторы банковских карт/Эффективный кэшбэк за повседневные покупки при разных схемах округления</a>
+                <p class=index-descr>Рассчитал эффективный кэшбеэк за свои повседневные покупки при разных схемах округления и разных ставках</p>
+            </li>
+            <li>
                 <span>2022-01-28</span>
                 <a href="https://onfin.github.io/notes/no_fair_price">На рынке не бывает справедливых цен</a>
                 <p class=index-descr>Потому что для каждого инвестора справедливая цена — своя</p>
@@ -480,7 +490,7 @@
                 <p class=index-descr>На странице собраны ссылки на различные мои финансовые калькуляторы.</p>
             </li>
             <li>
-                <span>2022-01-08</span>
+                <span>2022-01-29</span>
                 <a href="https://onfin.github.io/calculators/cards">Калькуляторы банковских карт</a>
                 <p class=index-descr>Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт.</p>
             </li>
